# formal-logic

./: formal-logic.cabal
Logic/: Propositional.hs
