name:                formal-logic
version:             0.2.0.0
synopsis:            Formal logic library
-- description:         
license:             LGPL-3
license-file:        LICENSE
author:              Marko van Treeck
maintainer:          markovantreeck@gmail.com
copyright:           2016
category:            Math
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Logic.Propositional
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
  -- hs-source-dirs:      
  default-language:    Haskell2010
